# freshguard-localconnector

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
connector/: __init__.py  __main__.py  api.py  config.py  forwarder.py  http.py  logging.py  main.py  models.py  outbox.py  register.py  storage.py  ws_client.py  ws_commands.py
tests/: test_api.py  test_forwarder.py  test_main.py  test_outbox.py  test_register.py  test_storage.py  test_ws_commands.py
